Fix toList() for Java 11